--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=${PORT:3000}
+
 spring.datasource.name=test
 spring.datasource.url=jdbc:mysql://localhost:3306/blog-application?serverTimezone=UTC
 spring.datasource.username=root
@@ -9,3 +11,9 @@ spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
 
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+project.image=images/
